objects/vlocity_ins__AssetPricingAdjustment__c.object
<CustomObject>
    <description>DEPRECATED. Use Account Pricing.</description>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Pricing Adjustments</relationshipLabel>
        <relationshipName>AssetPricingAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPricingAdjustmentReferenceId__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AssetPricingAdjustmentReferenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Asset Pricing Adjustments</relationshipLabel>
        <relationshipName>AssetPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ProvisioningStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Pricing Adjustment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>